--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 html, body {
   margin: 0;
   padding: 0;
+  align-content: center;
+  text-align: center;
+  color: #000000;
+  background-color: #ffef13;
 }
+
 canvas {
   display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
